--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -1,6 +1,5 @@
 {% load i18n %}
 {% load static from staticfiles %}
-{% trans "" %}
 <!DOCTYPE html>
 <html lang="uk">
 
@@ -105,6 +104,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.42/js/bootstrap-datetimepicker.min.js" charset="utf-8"></script>
+	<script src="{% url "jstranslate" %}"></script>
 	<script src="{% static "js/main.js" %}"></script>
 	{% block extra_js %}{% endblock extra_js %}
 </body>
