--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -77,10 +77,14 @@
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
 					<li role="presentation" {% if request.path == '/' %} class="active"{% endif %}><a href="{% url "home" %}" class="content-url">{% trans "Students" %}</a></li>
+					{% if user.is_authenticated %}
 					<li role="presentation" {% if '/journal' in request.path %} class="active"{% endif %}><a href="{% url "journal" %}" class="content-url">{% trans "Journal" %}</a></li>
 					<li role="presentation" {% if '/groups' in request.path %} class="active"{% endif %}><a href="{% url "groups" %}" class="content-url">{% trans "Groups" %}</a></li>
 					<li role="presentation" {% if '/exams' in request.path %} class="active"{% endif %}><a href="{% url "exams" %}" class="content-url">{% trans "Exams" %}</a></li>
+					{% endif %}
+					{% if perms.auth.add_user %}
 					<li role="presentation" {% if '/contact-admin' in request.path %}class="active"{% endif %}><a href="{% url "contact_admin" %}" class="contact-admin-form-button content-url">{% trans "Contact" %}</a></li>
+					{% endif %}
 				</ul>
 			</div>
 		</div>
