--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -4,7 +4,7 @@
 {% block meta_title %}{% trans "Students" %}{% endblock meta_title %}
 {% block title %}{% trans "Students List" %}{% endblock title %}
 {% block content %}
-	<a href="{% url "students_add" %}" class="btn btn-primary" id="student-add-form-button">{% trans "Add Student" %}</a></h2>
+	{% if user.is_authenticated %}<a href="{% url "students_add" %}" class="btn btn-primary" id="student-add-form-button">{% trans "Add Student" %}</a>{% endif %}
 
 				<!-- Start Students Listing -->
 				<table class="table table-hover table-striped">
@@ -32,7 +32,7 @@
 								{% if order_by == 'ticket' and reverse != '1' %}&uarr;
 								{% elif order_by == 'ticket' and reverse == '1' %}&darr;
 								{% endif %}</a></th>
-              <th>{% trans "Actions" %}</th>
+              {% if user.is_authenticated %}<th>{% trans "Actions" %}</th>{% endif %}
           </thead>
 					{% endwith %}
 					<tbody>
@@ -50,9 +50,15 @@
 								{% else %}
 								<img class="img-circle" src="{% static "img/default_user.png" %}" height="30" width="30" />
 								{% endif %}</td>
+								{% if user.is_authenticated %}
 								<td><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">{{ student.last_name }}</td>
 								<td><a href="{% url "students_edit" student.id %}" class="student-edit-form-link">{{ student.first_name }}</td>
-									<td>{{ student.ticket }}</td>
+								{% else %}
+								<td>{{ student.last_name }}</td>
+								<td>{{ student.first_name }}</td>
+								{% endif %}
+								<td>{{ student.ticket }}</td>
+									{% if user.is_authenticated %}
 									<td>
 										<div class="btn-group">
 											<button type="button" class="btn btn-default dropdown-toggle"
@@ -66,6 +72,7 @@
 										</ul>
 									</div>
 								</td>
+								{% endif %}
 							</tr>
 							{% endfor %}
           </tbody>
