--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -65,6 +65,7 @@
 			{% else %}
 			<!-- User's toolbar for anonymous users -->
 			<div class="col-xs-6" id="user-toolbar">
+				<a href="{% url "social:begin" "facebook" %}?next={{ request.path }}"><img class='img-rounded' heigh="25" width="25" src="{% static "img/fb_short.png" %}" alt="FB"></a> |
 				<a href="{% url "users:auth_login" %}">{% trans "Login" %}</a> |
 				<a href="{% url "users:registration_register" %}">{% trans "Register" %}</a>
 			</div>
