--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -1,6 +1,7 @@
 {% extends "students/base.html" %}
 {% load i18n %}
 {% load static from staticfiles %}
+{% load str2int %}
 {% block meta_title %}{% trans "Add Student" %}{% endblock meta_title %}
 {% block title %}{% trans "Add Student" %}{% endblock title %}
 {% block status_message %}
@@ -61,7 +62,7 @@
 		<select name="student_group" id="student_group" class="form-control">
 		<option value="">{% trans "Select a Group" %}</option>
 		{% for group in groups %}
-		<option value="{{ group.id }}" {% if group.id == request.POST.student_group|add:0 %}selected="1"{% endif %}>{{ group.title }}</option>
+		<option value="{{ group.id }}" {% if group.id == request.POST.student_group|str2int %}selected="1"{% endif %}>{{ group.title }}</option>
 		{% endfor %}
 		</select>
 		<span class="help-block">{{ errors.student_group }}</span>
